--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">Calculator</string>
     <string name="buttonTextOne">Calculator</string>
     <string name="buttonTextTwo">Button 2</string>
+    <string name="enter_text">Enter Text</string>
 </resources>
