--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="enter_your_password">Enter your password</string>
     <string name="clear">Clear</string>
     <string name="submit">Submit</string>
+    <string name="this_is_a_image_of_a_person">This is a image of a person</string>
 </resources>
